Fix spacing for toggle item.

--- a/dev/sass/qwiki/_forms.scss
+++ b/dev/sass/qwiki/_forms.scss
@@ -191,5 +191,6 @@ textarea{
   .switch-paddle {
     position: relative;
     top: 2px;
+    margin-left: 0;
   }
 }
